Add an unproxy method to CDIUtil
Whenever an injected object is used in together with Jersey, it is
unable to use it for serialization and deserialization. This is because
the object is a wrapped porxy version of the original rather than the
real one.