@@ -350,6 +350,7 @@
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.handler=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.packet=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.producer=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=weld.core.impl
